--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,15 +5,15 @@ branches:
   only:
     - main
 
-cache: node_modules  # кеширование
+cache: node_modules  
 
 install:
-  - npm install  # команда установки зависимостей
+  - npm install  
 
-build: off  # отключаем встроенную в appveyor систему сборки
+build: off  
 
 build_script:
-  - npm run build   # команда сборки
+  - npm run build   
 
 test_script:
-  - npm run lint && npm test  # скрипт тестирования
+  - npm run lint && npm test 
