--- a/package.json
+++ b/package.json
@@ -9,6 +9,21 @@
     "lint": "eslint .",
     "build": "webpack --mode production"
   },
+  "browser": {
+    "[module-name]": false
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,6 +35,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jest": "^27.6.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
